// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`_data.typ golden snapshots > matches for a cover carrying assets and a custom size 1`] = `
"// Auto-generated by paper_cover generator — do not edit

// Total dimensions
#let total_width = 314.0000mm
#let total_height = 216.0000mm
#let bleed = 3.0000mm
#let face_width = 148.0000mm
#let face_height = 210.0000mm
#let spine_width = 12.0000mm
#let back_x = 3.0000mm
#let spine_x = 151.0000mm
#let front_x = 163.0000mm
#let barcode_x = 80.5000mm
#let barcode_y = 15.7000mm
#let barcode_w = 50.8000mm
#let barcode_h = 30.4800mm
#let has_spine = true
#let has_spine_text = true
#let has_bleed = true
#let home_print = false
#let home_margin = 8.0000mm
#let home_corner = 6.0000mm

// Text content
#let title1 = "The"
#let title2 = "Art of Code"
#let title3 = ""
#let subtitle_lines = ("A journey through software craft",)
#let spine_title = "The Art of Code"
#let spine_author = "Alice Chen"
#let author = "Alice Chen"
#let isbn = "978-3-16-148410-0"
#let blurb = [A deep dive into great software.]
#let has_title1 = true
#let has_title2 = true
#let has_title3 = false
#let has_subtitle = true
#let has_author = true
#let has_blurb = true

// Per-text sizing
#let title1_size = 1
#let title2_size = 1
#let title3_size = 1
#let subtitle_size = 1
#let author_size = 1
#let blurb_size = 1
#let spine_title_size_mod = 1
#let spine_author_size_mod = 1

// Colors
#let has_front_gradient = false
#let color_front_bg = color.hsl(0deg, 0%, 100%)
#let color_front_gradient_start = color.hsl(0deg, 0%, 100%)
#let color_front_gradient_end = color.hsl(0deg, 0%, 100%)
#let color_back_bg = color.hsl(0deg, 0%, 100%)
#let color_spine_bg = none
#let color_front_title1 = color.hsl(0deg, 0%, 10%)
#let color_front_title2 = color.hsl(0deg, 0%, 10%)
#let color_front_title3 = color.hsl(0deg, 0%, 10%)
#let color_front_subtitle = color.hsl(0deg, 0%, 10%)
#let color_front_author = color.hsl(0deg, 0%, 10%)
#let color_blurb = color.hsl(0deg, 0%, 10%)
#let color_blurb_bg = color.hsl(0deg, 0%, 100%)
#let color_spine_title = color.hsl(0deg, 0%, 10%)
#let color_spine_author = color.hsl(0deg, 0%, 10%)

// Typography
#let font_body_family = ("Noto Serif",)
#let font_title1_family = ("Noto Serif",)
#let font_title2_family = ("Noto Serif",)
#let font_title3_family = ("Noto Serif",)
#let font_subtitle_family = ("Noto Serif",)
#let font_author_family = ("Noto Serif",)
#let font_blurb_family = ("Noto Serif",)
#let font_spine_title_family = ("Noto Serif",)
#let font_spine_author_family = ("Noto Serif",)
#let title1_weight = 700
#let title1_italic = false
#let title2_weight = 700
#let title2_italic = false
#let title3_weight = 700
#let title3_italic = false
#let subtitle_weight = 100
#let subtitle_italic = false
#let author_weight = 400
#let author_italic = false
#let spine_title_weight = 700
#let spine_title_italic = false
#let spine_author_weight = 400
#let spine_author_italic = false
#let fs_back_blurb = 3.5000mm
#let fs_spine_title = 6.6300mm
#let fs_spine_author = 4.9725mm

// Element positions and alignment
#let title_position = "top"
#let subtitle_position = "middle"
#let author_position = "bottom"
#let title_alignment = center
#let subtitle_alignment = center
#let author_alignment = center
#let blurb_alignment = left
#let blurb_justify = false

// Panel margins
#let front_margin = 16.8000mm
#let back_margin = 10.5000mm
#let spiral_margin = 7.0000mm
#let front_content_w = 107.4000mm
#let front_content_h = 176.4000mm
#let back_content_w = 127.0000mm
#let back_content_h = 189.0000mm
#let blurb_width = 120.0000mm
#let blurb_padding = 6.3000mm
#let blurb_spacing = 1

// Vertical margins
#let title_spacing = 3
#let title_margin_top = 3
#let title_margin_bottom = 3
#let subtitle_spacing = 1.5
#let subtitle_margin_top = 3
#let subtitle_margin_bottom = 3
#let author_margin_top = 3
#let author_margin_bottom = 3

// Assets
#let has_image = false
#let image_filename = ""
#let image_coverage = "front"
#let image_is_vector = false
#let has_icon = true
#let icon_mode = "echo"
#let icon_size_mod = 1.5
#let has_spine_icon = true
#let has_barcode = true
#let has_pattern = true
#let pattern_tile_w = 40.0000mm
#let pattern_tile_h = 80.0000mm
"
`;

exports[`_data.typ golden snapshots > matches for a fully styled cover 1`] = `
"// Auto-generated by paper_cover generator — do not edit

// Total dimensions
#let total_width = 328.3102mm
#let total_height = 234.9500mm
#let bleed = 3.1750mm
#let face_width = 152.4000mm
#let face_height = 228.6000mm
#let spine_width = 17.1602mm
#let back_x = 3.1750mm
#let spine_x = 155.5750mm
#let front_x = 172.7352mm
#let barcode_x = 98.4250mm
#let barcode_y = 12.7000mm
#let barcode_w = 50.8000mm
#let barcode_h = 30.4800mm
#let has_spine = true
#let has_spine_text = true
#let has_bleed = true
#let home_print = true
#let home_margin = 8.0000mm
#let home_corner = 6.0000mm

// Text content
#let title1 = "The"
#let title2 = "Art of Code"
#let title3 = "Volume Two"
#let subtitle_lines = ("A journey", "through software craft",)
#let spine_title = "The Art of Code Volume Two"
#let spine_author = "Alice Chen"
#let author = "Alice Chen"
#let isbn = "978-3-16-148410-0"
#let blurb = [A deep dive into great software.]
#let has_title1 = true
#let has_title2 = true
#let has_title3 = true
#let has_subtitle = true
#let has_author = true
#let has_blurb = true

// Per-text sizing
#let title1_size = 1.4
#let title2_size = 1
#let title3_size = 1
#let subtitle_size = 1
#let author_size = 1
#let blurb_size = 1
#let spine_title_size_mod = 1
#let spine_author_size_mod = 1

// Colors
#let has_front_gradient = true
#let color_front_bg = color.hsl(237deg, 28%, 14%)
#let color_front_gradient_start = color.hsl(92deg, 12%, 14%)
#let color_front_gradient_end = color.hsl(22deg, 12%, 14%)
#let color_back_bg = color.hsl(237deg, 28%, 14%)
#let color_spine_bg = color.hsl(234deg, 88%, 73%)
#let color_front_title1 = color.hsl(40deg, 80%, 60%)
#let color_front_title2 = color.hsl(40deg, 80%, 60%)
#let color_front_title3 = color.hsl(40deg, 80%, 60%)
#let color_front_subtitle = color.hsl(0deg, 0%, 100%)
#let color_front_author = color.hsl(0deg, 0%, 100%)
#let color_blurb = color.hsl(0deg, 0%, 10%)
#let color_blurb_bg = color.hsl(0deg, 0%, 96%)
#let color_spine_title = color.hsl(0deg, 0%, 10%)
#let color_spine_author = color.hsl(0deg, 0%, 10%)

// Typography
#let font_body_family = ("Noto Serif",)
#let font_title1_family = ("Playfair Display",)
#let font_title2_family = ("Playfair Display",)
#let font_title3_family = ("Playfair Display",)
#let font_subtitle_family = ("Test Sans",)
#let font_author_family = ("Test Sans",)
#let font_blurb_family = ("Noto Serif",)
#let font_spine_title_family = ("Playfair Display",)
#let font_spine_author_family = ("Test Sans",)
#let title1_weight = 900
#let title1_italic = true
#let title2_weight = 700
#let title2_italic = false
#let title3_weight = 700
#let title3_italic = false
#let subtitle_weight = 300
#let subtitle_italic = false
#let author_weight = 400
#let author_italic = false
#let spine_title_weight = 700
#let spine_title_italic = false
#let spine_author_weight = 400
#let spine_author_italic = false
#let fs_back_blurb = 3.5000mm
#let fs_spine_title = 9.4810mm
#let fs_spine_author = 7.1108mm

// Element positions and alignment
#let title_position = "top"
#let subtitle_position = "middle"
#let author_position = "bottom"
#let title_alignment = left
#let subtitle_alignment = center
#let author_alignment = right
#let blurb_alignment = left
#let blurb_justify = true

// Panel margins
#let front_margin = 22.8600mm
#let back_margin = 16.0020mm
#let spiral_margin = 0.0000mm
#let front_content_w = 106.6800mm
#let front_content_h = 182.8800mm
#let back_content_w = 120.3960mm
#let back_content_h = 196.5960mm
#let blurb_width = 120.3960mm
#let blurb_padding = 13.7160mm
#let blurb_spacing = 1.4

// Vertical margins
#let title_spacing = 5
#let title_margin_top = 6
#let title_margin_bottom = 3
#let subtitle_spacing = 1.5
#let subtitle_margin_top = 3
#let subtitle_margin_bottom = 3
#let author_margin_top = 3
#let author_margin_bottom = 3

// Assets
#let has_image = false
#let image_filename = ""
#let image_coverage = "front"
#let image_is_vector = false
#let has_icon = false
#let icon_mode = "center"
#let icon_size_mod = 1
#let has_spine_icon = false
#let has_barcode = true
#let has_pattern = false
#let pattern_tile_w = 80.0000mm
#let pattern_tile_h = 80.0000mm
"
`;

exports[`_data.typ golden snapshots > matches for a multilingual cover with per-field font fallbacks 1`] = `
"// Auto-generated by paper_cover generator — do not edit

// Total dimensions
#let total_width = 328.3102mm
#let total_height = 234.9500mm
#let bleed = 3.1750mm
#let face_width = 152.4000mm
#let face_height = 228.6000mm
#let spine_width = 17.1602mm
#let back_x = 3.1750mm
#let spine_x = 155.5750mm
#let front_x = 172.7352mm
#let barcode_x = 98.4250mm
#let barcode_y = 12.7000mm
#let barcode_w = 50.8000mm
#let barcode_h = 30.4800mm
#let has_spine = true
#let has_spine_text = true
#let has_bleed = true
#let home_print = false
#let home_margin = 8.0000mm
#let home_corner = 6.0000mm

// Text content
#let title1 = "日本語"
#let title2 = "の本"
#let title3 = ""
#let subtitle_lines = ("שלום",)
#let spine_title = "日本語 の本"
#let spine_author = "홍길동"
#let author = "홍길동"
#let isbn = "978-3-16-148410-0"
#let blurb = [#text(font: ("Noto Serif", "Noto Serif JP", "Noto Serif SC",))[日本語のテキストです。]#text(font: ("Noto Serif", "Noto Serif SC", "Noto Serif JP",))[这是简体中文。]]
#let has_title1 = true
#let has_title2 = true
#let has_title3 = false
#let has_subtitle = true
#let has_author = true
#let has_blurb = true

// Per-text sizing
#let title1_size = 1
#let title2_size = 1
#let title3_size = 1
#let subtitle_size = 1
#let author_size = 1
#let blurb_size = 1
#let spine_title_size_mod = 1
#let spine_author_size_mod = 1

// Colors
#let has_front_gradient = false
#let color_front_bg = color.hsl(0deg, 0%, 100%)
#let color_front_gradient_start = color.hsl(0deg, 0%, 100%)
#let color_front_gradient_end = color.hsl(0deg, 0%, 100%)
#let color_back_bg = color.hsl(0deg, 0%, 100%)
#let color_spine_bg = none
#let color_front_title1 = color.hsl(0deg, 0%, 10%)
#let color_front_title2 = color.hsl(0deg, 0%, 10%)
#let color_front_title3 = color.hsl(0deg, 0%, 10%)
#let color_front_subtitle = color.hsl(0deg, 0%, 10%)
#let color_front_author = color.hsl(0deg, 0%, 10%)
#let color_blurb = color.hsl(0deg, 0%, 10%)
#let color_blurb_bg = color.hsl(0deg, 0%, 100%)
#let color_spine_title = color.hsl(0deg, 0%, 10%)
#let color_spine_author = color.hsl(0deg, 0%, 10%)

// Typography
#let font_body_family = ("Noto Serif", "Noto Serif JP", "Noto Serif Hebrew", "Noto Serif KR", "Noto Serif SC",)
#let font_title1_family = ("Noto Serif", "Noto Serif JP",)
#let font_title2_family = ("Noto Serif", "Noto Serif JP",)
#let font_title3_family = ("Noto Serif",)
#let font_subtitle_family = ("Noto Serif", "Noto Serif Hebrew",)
#let font_author_family = ("Noto Serif", "Noto Serif KR",)
#let font_blurb_family = ("Noto Serif", "Noto Serif JP", "Noto Serif SC",)
#let font_spine_title_family = ("Noto Serif", "Noto Serif JP",)
#let font_spine_author_family = ("Noto Serif", "Noto Serif KR",)
#let title1_weight = 700
#let title1_italic = false
#let title2_weight = 700
#let title2_italic = false
#let title3_weight = 700
#let title3_italic = false
#let subtitle_weight = 100
#let subtitle_italic = false
#let author_weight = 400
#let author_italic = false
#let spine_title_weight = 700
#let spine_title_italic = false
#let spine_author_weight = 400
#let spine_author_italic = false
#let fs_back_blurb = 3.5000mm
#let fs_spine_title = 9.4810mm
#let fs_spine_author = 7.1108mm

// Element positions and alignment
#let title_position = "top"
#let subtitle_position = "middle"
#let author_position = "bottom"
#let title_alignment = center
#let subtitle_alignment = center
#let author_alignment = center
#let blurb_alignment = left
#let blurb_justify = false

// Panel margins
#let front_margin = 18.2880mm
#let back_margin = 11.4300mm
#let spiral_margin = 0.0000mm
#let front_content_w = 115.8240mm
#let front_content_h = 192.0240mm
#let back_content_w = 129.5400mm
#let back_content_h = 205.7400mm
#let blurb_width = 129.5400mm
#let blurb_padding = 6.8580mm
#let blurb_spacing = 1

// Vertical margins
#let title_spacing = 3
#let title_margin_top = 3
#let title_margin_bottom = 3
#let subtitle_spacing = 1.5
#let subtitle_margin_top = 3
#let subtitle_margin_bottom = 3
#let author_margin_top = 3
#let author_margin_bottom = 3

// Assets
#let has_image = false
#let image_filename = ""
#let image_coverage = "front"
#let image_is_vector = false
#let has_icon = false
#let icon_mode = "center"
#let icon_size_mod = 1
#let has_spine_icon = false
#let has_barcode = true
#let has_pattern = false
#let pattern_tile_w = 80.0000mm
#let pattern_tile_h = 80.0000mm
"
`;

exports[`_data.typ golden snapshots > matches for a plain text-only cover 1`] = `
"// Auto-generated by paper_cover generator — do not edit

// Total dimensions
#let total_width = 328.3102mm
#let total_height = 234.9500mm
#let bleed = 3.1750mm
#let face_width = 152.4000mm
#let face_height = 228.6000mm
#let spine_width = 17.1602mm
#let back_x = 3.1750mm
#let spine_x = 155.5750mm
#let front_x = 172.7352mm
#let barcode_x = 98.4250mm
#let barcode_y = 12.7000mm
#let barcode_w = 50.8000mm
#let barcode_h = 30.4800mm
#let has_spine = true
#let has_spine_text = true
#let has_bleed = true
#let home_print = false
#let home_margin = 8.0000mm
#let home_corner = 6.0000mm

// Text content
#let title1 = "The"
#let title2 = "Art of Code"
#let title3 = ""
#let subtitle_lines = ("A journey through software craft",)
#let spine_title = "The Art of Code"
#let spine_author = "Alice Chen"
#let author = "Alice Chen"
#let isbn = "978-3-16-148410-0"
#let blurb = [A deep dive into great software.]
#let has_title1 = true
#let has_title2 = true
#let has_title3 = false
#let has_subtitle = true
#let has_author = true
#let has_blurb = true

// Per-text sizing
#let title1_size = 1
#let title2_size = 1
#let title3_size = 1
#let subtitle_size = 1
#let author_size = 1
#let blurb_size = 1
#let spine_title_size_mod = 1
#let spine_author_size_mod = 1

// Colors
#let has_front_gradient = false
#let color_front_bg = color.hsl(0deg, 0%, 100%)
#let color_front_gradient_start = color.hsl(0deg, 0%, 100%)
#let color_front_gradient_end = color.hsl(0deg, 0%, 100%)
#let color_back_bg = color.hsl(0deg, 0%, 100%)
#let color_spine_bg = none
#let color_front_title1 = color.hsl(0deg, 0%, 10%)
#let color_front_title2 = color.hsl(0deg, 0%, 10%)
#let color_front_title3 = color.hsl(0deg, 0%, 10%)
#let color_front_subtitle = color.hsl(0deg, 0%, 10%)
#let color_front_author = color.hsl(0deg, 0%, 10%)
#let color_blurb = color.hsl(0deg, 0%, 10%)
#let color_blurb_bg = color.hsl(0deg, 0%, 100%)
#let color_spine_title = color.hsl(0deg, 0%, 10%)
#let color_spine_author = color.hsl(0deg, 0%, 10%)

// Typography
#let font_body_family = ("Noto Serif",)
#let font_title1_family = ("Noto Serif",)
#let font_title2_family = ("Noto Serif",)
#let font_title3_family = ("Noto Serif",)
#let font_subtitle_family = ("Noto Serif",)
#let font_author_family = ("Noto Serif",)
#let font_blurb_family = ("Noto Serif",)
#let font_spine_title_family = ("Noto Serif",)
#let font_spine_author_family = ("Noto Serif",)
#let title1_weight = 700
#let title1_italic = false
#let title2_weight = 700
#let title2_italic = false
#let title3_weight = 700
#let title3_italic = false
#let subtitle_weight = 100
#let subtitle_italic = false
#let author_weight = 400
#let author_italic = false
#let spine_title_weight = 700
#let spine_title_italic = false
#let spine_author_weight = 400
#let spine_author_italic = false
#let fs_back_blurb = 3.5000mm
#let fs_spine_title = 9.4810mm
#let fs_spine_author = 7.1108mm

// Element positions and alignment
#let title_position = "top"
#let subtitle_position = "middle"
#let author_position = "bottom"
#let title_alignment = center
#let subtitle_alignment = center
#let author_alignment = center
#let blurb_alignment = left
#let blurb_justify = false

// Panel margins
#let front_margin = 18.2880mm
#let back_margin = 11.4300mm
#let spiral_margin = 0.0000mm
#let front_content_w = 115.8240mm
#let front_content_h = 192.0240mm
#let back_content_w = 129.5400mm
#let back_content_h = 205.7400mm
#let blurb_width = 129.5400mm
#let blurb_padding = 6.8580mm
#let blurb_spacing = 1

// Vertical margins
#let title_spacing = 3
#let title_margin_top = 3
#let title_margin_bottom = 3
#let subtitle_spacing = 1.5
#let subtitle_margin_top = 3
#let subtitle_margin_bottom = 3
#let author_margin_top = 3
#let author_margin_bottom = 3

// Assets
#let has_image = false
#let image_filename = ""
#let image_coverage = "front"
#let image_is_vector = false
#let has_icon = false
#let icon_mode = "center"
#let icon_size_mod = 1
#let has_spine_icon = false
#let has_barcode = true
#let has_pattern = false
#let pattern_tile_w = 80.0000mm
#let pattern_tile_h = 80.0000mm
"
`;
